fix: allow overflow in data tables

--- a/app/styles/addon-overrides/_ember-data-table.scss
+++ b/app/styles/addon-overrides/_ember-data-table.scss
@@ -1,3 +1,7 @@
 td, th {
   border-radius: 0;
 }
+
+.auk-table > *[data-table], .auk-table .data-table-content {
+  overflow: visible;
+}
